--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.5.1",
+    "axios": "^1.6.2",
+    "axios-mock": "^1.0.1",
     "axios-mock-adapter": "^1.22.0",
     "bootstrap": "^5.3.2",
     "vue": "^3.3.4",
