--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios-mock": "^1.0.1",
     "axios-mock-adapter": "^1.22.0",
     "bootstrap": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vuex": "^4.1.0"
